tests/good/int-var-redec-in-let.tig
let
	var a := 42
	var a := 43
in
	a
end