tests/bad/var_name.tig
let
var _tg = 2;
in

end
